--- a/semver_spec_serialization/Cargo.toml
+++ b/semver_spec_serialization/Cargo.toml
@@ -11,6 +11,8 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = { version = "1.0.79", features = ["preserve_order"] }
 lazy-regex = "2.3.0"
 cached = "0.34"
+pest = "2.0"
+pest_derive = "2.0"
 
 [dev-dependencies]
 test-case = "2.1.0"
